# 42cursus-python-for-data-science

./: README.md
D00/: Makefile
D00/ex00/: Hello.py
D00/ex02/: tester.py
D00/ex04/: tester.sh
D00/srcs/: docker-compose.yml
D00/srcs/requirements/D00-py-for-dt/: Dockerfile
D00/srcs/requirements/D00-py-for-dt/conf/: requirements.txt
D00/srcs/requirements/D00-py-for-dt/exercises/ex01/: format_ft_time.py
D00/srcs/requirements/D00-py-for-dt/exercises/ex02/: find_ft_type.py
D00/srcs/requirements/D00-py-for-dt/exercises/ex03/: NULL_not_found.py
D00/srcs/requirements/D00-py-for-dt/exercises/ex04/: whatis.py
D00/srcs/requirements/D00-py-for-dt/exercises/ex05/: building.py  tester.sh
D00/srcs/requirements/D00-py-for-dt/exercises/ex06/: filterstring.py  ft_filter.py  tester.py  tester_filterstring.sh
D00/srcs/requirements/D00-py-for-dt/exercises/ex09/ft_package/: LICENSE  README.md  pyproject.toml
D00/srcs/requirements/D00-py-for-dt/exercises/ex09/ft_package/ft_yde_goes_package/: __init__.py  count_in_list.py
D01/: Makefile
D01/srcs/: docker-compose.yml
D01/srcs/requirements/D01-py-for-dt/: Dockerfile
D01/srcs/requirements/D01-py-for-dt/conf/: requirements.txt
D02/: Makefile
D02/srcs/: docker-compose.yml
D02/srcs/requirements/D02-py-for-dt/: Dockerfile
D02/srcs/requirements/D02-py-for-dt/conf/: requirements.txt
D03/srcs/: docker-compose.yml
D03/srcs/requirements/D03-py-for-dt/: Dockerfile
D04/: Makefile
D04/srcs/: docker-compose.yml
D04/srcs/requirements/D04-py-for-dt/: Dockerfile
(+39 files in other folders)
